tests/NormalTests/paczka1/fuzzy1/79373454.err
Error in line 11: UyfqckF S480 2,0
Error in line 14: UyfqckF S944 97,9
Error in line 15: S63 A784 83,4
Error in line 9: h73 A784 956,2
Error in line 26: Ymcm S63 82,9
Error in line 30: HmrSIV1B9x S480 40,5
Error in line 22: 4sZL S63 77,3
